--- a/ChronoKeep/UI/MainPages/DivisionsPage.xaml
+++ b/ChronoKeep/UI/MainPages/DivisionsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChronoKeep.UI.MainPages.DivisionsPage"
+﻿<Page x:Class="ChronoKeep.UI.MainPages.DistancesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ChronoKeep.UI.MainPages"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="DivisionsPage">
+      Title="DistancesPage">
 
     <Grid>
         <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
@@ -15,7 +15,7 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <ListBox Name="DivisionsBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" Grid.Row="0" ScrollViewer.CanContentScroll="False" PreviewMouseWheel="DivisionsBox_PreviewMouseWheel">
+            <ListBox Name="DistancesBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" Grid.Row="0" ScrollViewer.CanContentScroll="False" PreviewMouseWheel="DistanceBox_PreviewMouseWheel">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
