--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="Modify Participants" Height="250" Width="250" ResizeMode="NoResize" Closing="Window_Closing">
     <StackPanel VerticalAlignment="Center">
-        <CheckBox Name="SwitchDivision" Content="Switch Participants to" FontSize="14" VerticalContentAlignment="Center" Width="210"/>
-        <ComboBox Name="DivisionBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
+        <CheckBox Name="SwitchDistance" Content="Switch Participants to" FontSize="14" VerticalContentAlignment="Center" Width="210"/>
+        <ComboBox Name="DistanceBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
         <StackPanel Name="EarlyStartHolder">
             <CheckBox Name="EarlyStart" Content="Set Early Start to" FontSize="14" VerticalContentAlignment="Center" Width="210" Margin="5,5,5,5"/>
             <DockPanel LastChildFill="False" HorizontalAlignment="Center">
