--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -10,7 +10,7 @@
         <DockPanel>
             <Label Content="Bib" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
             <TextBox Name="BibBox" FontSize="16" Margin="0,5,5,5" Width="100" VerticalContentAlignment="Center" KeyDown="Box_KeyDown"/>
-            <ComboBox Name="DivisionBox" FontSize="16" Margin="0,5,5,5"/>
+            <ComboBox Name="DistanceBox" FontSize="16" Margin="0,5,5,5"/>
         </DockPanel>
         <DockPanel LastChildFill="False" HorizontalAlignment="Center">
             <CheckBox Name="CheckedInBox" Content="Checked In" FontSize="16" Margin="5,0,10,0" Width="Auto" VerticalContentAlignment="Center" />
