--- a/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
+++ b/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChronoKeep.UI.Timing.DivisionStatsPage"
+﻿<Page x:Class="ChronoKeep.UI.Timing.DistanceStatsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ChronoKeep.UI.Timing"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="DivisionStatsPage">
+      Title="DistanceStatsPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto">
             <StackPanel>
-                <Label Name="DivisionName" Content="DivisionName" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,-5"/>
+                <Label Name="DistanceName" Content="Distance Name" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,-5"/>
                 <Expander x:Name="activePanel" Header="Active" Margin="0,0,0,0" IsExpanded="True" FontSize="12" HorizontalAlignment="Stretch">
                     <ListView x:Name="activeListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12">
                         <ListView.View>
