Added some debugging log messages to the API controller. Ensured we update the window when the API auto upload is stopped or terminates. Removed cost from the division. Removed shirt values from events. Fixed a bug that didn't allow for event deletion. The Manual upload button for uploading via API is now disabled when the Auto Upload is enabled. Stopping the Auto Upload should work properly now.  The button should also better reflect when the status of the API when attempting to stop the process. Removed early start and next year values from eventspecific. Renamed the Divisions page to Distances page. Added files for announcer window.

--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -7,20 +7,8 @@
         mc:Ignorable="d"
         Title="Modify Participants" Height="250" Width="250" ResizeMode="NoResize" Closing="Window_Closing">
     <StackPanel VerticalAlignment="Center">
-        <CheckBox Name="SwitchDistance" Content="Switch Participants to" FontSize="14" VerticalContentAlignment="Center" Width="210"/>
+        <Label Content="Switch Participants to" FontSize="14" VerticalContentAlignment="Center" Width="210"/>
         <ComboBox Name="DistanceBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
-        <StackPanel Name="EarlyStartHolder">
-            <CheckBox Name="EarlyStart" Content="Set Early Start to" FontSize="14" VerticalContentAlignment="Center" Width="210" Margin="5,5,5,5"/>
-            <DockPanel LastChildFill="False" HorizontalAlignment="Center">
-                <RadioButton Name="EarlyStartTrue" Content="True" GroupName="ESVal" IsChecked="True" Margin="5,0,15,5"/>
-                <RadioButton Content="False" GroupName="ESVal" Margin="15,0,5,5"/>
-            </DockPanel>
-        </StackPanel>
-        <CheckBox Name="CheckIn" Content="Set Checked In to" FontSize="14" VerticalContentAlignment="Center" Width="210" Margin="5,5,5,5"/>
-        <DockPanel LastChildFill="False" HorizontalAlignment="Center">
-            <RadioButton Name="CheckedInTrue" Content="True" GroupName="CIVal" IsChecked="True" Margin="5,0,15,5"/>
-            <RadioButton Content="False" GroupName="CIVal" Margin="15,0,5,5"/>
-        </DockPanel>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
