--- a/ChronoKeep/UI/AnnouncerWindow/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/AnnouncerWindow/AnnouncerWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="AnnouncerWindow" Height="450" Width="800">
     <Grid>
-        
+        <Label Name="NoAnnouncer" Content="No Announcer Reader Set" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible"/>
+        <ListBox x:Name="AnnouncerBox" Visibility="Visible">
+        </ListBox>
     </Grid>
 </Window>
