--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ChronoKeep.UI.AnnouncerWindow.AnnouncerWindow"
+﻿<Window x:Class="ChronoKeep.UI.Announcer.AnnouncerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChronoKeep.UI.AnnouncerWindow"
+        xmlns:local="clr-namespace:ChronoKeep.UI.Announcer"
         mc:Ignorable="d"
-        Title="AnnouncerWindow" Height="450" Width="800">
+        Title="Announcer" Height="450" Width="800">
     <Grid>
         <Label Name="NoAnnouncer" Content="No Announcer Reader Set" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible"/>
         <ListBox x:Name="AnnouncerBox" Visibility="Visible">
