--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -8,7 +8,8 @@
         Title="Announcer" Height="450" Width="800">
     <Grid>
         <Label Name="NoAnnouncer" Content="No Announcer Reader Set" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible"/>
-        <ListBox x:Name="AnnouncerBox" Visibility="Visible">
-        </ListBox>
+        <ScrollViewer>
+            <ListBox x:Name="AnnouncerBox" Visibility="Visible" />
+        </ScrollViewer>
     </Grid>
 </Window>
