--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChronoKeep.UI.Announcer"
         mc:Ignorable="d"
-        Title="Announcer" Height="450" Width="800">
+        Title="Announcer" Height="450" Width="800" Closing="Window_Closing">
     <Grid>
         <Label Name="NoAnnouncer" Content="No Announcer Reader Set" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible"/>
         <ScrollViewer>
