--- a/ChronoKeep/UI/Export/ExportDistanceResults.xaml
+++ b/ChronoKeep/UI/Export/ExportDistanceResults.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ChronoKeep.UI.Export.ExportBAAResults"
+﻿<Window x:Class="ChronoKeep.UI.Export.ExportDistanceResults"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChronoKeep.UI.Export"
         mc:Ignorable="d"
-        Title="ExportBAAResults" Height="250" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing">
+        Title="ExportDistanceResults" Height="250" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
