Adding Backyard Ultra style timing to options. Program saves and displays the option for selecting Backyard Ultra timing. This option disables a few of the other options for an event. Timing of this style of event basically requires there to only be a single *distance*. This means common segments and common age groups are basically required. Along with this, we'll force the timing by gun time for each hour. We also now reset age groups if the user changes from common age groups to separated age groups or vice versa.

--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -53,9 +53,10 @@
             <CheckBox Name="segmentCheckBox" Content="Distance Specific Segments" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
             <DockPanel Margin="10,5,10,5">
                 <Label Content="Event Type" FontSize="16"/>
-                <ComboBox Name="TypeBox" Margin="10,0,0,0" VerticalContentAlignment="Center" IsEnabled="False">
+                <ComboBox Name="TypeBox" Margin="10,0,0,0" VerticalContentAlignment="Center" IsEnabled="False" SelectionChanged="TypeBox_SelectionChanged">
                     <ComboBoxItem Content="Distance Based" Uid="0" IsSelected="True"/>
                     <ComboBoxItem Content="Time Based" Uid="1" />
+                    <ComboBoxItem Content="Backyard Ultra" Uid="2" />
                 </ComboBox>
             </DockPanel>
             <Separator Margin="5,5,5,5" />
