--- a/ChronoKeep/UI/MainPages/AboutPage.xaml
+++ b/ChronoKeep/UI/MainPages/AboutPage.xaml
@@ -11,7 +11,8 @@
     <Grid>
         <StackPanel Margin="0,20,0,0">
             <Label x:Name="ProgramNameLabel" Content="Event Director" FontSize="28px" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,15,0,0"/>
-            <Label x:Name="VersionLabel" Content="v0.1.6" FontSize="14px" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,-10,0,0" />
+            <Label x:Name="VersionLabel" Content="v0.1.6" FontSize="14px" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,-10,0,0"/>
+            <Button Name="Update" Content="Check for Updates" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-15,0,20" Padding="6" Click="VersionLabel_Click" />
             <Label x:Name="CreatorLabelLabel" Content="Created by" FontSize="16px" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,-10,0,0" />
             <Label x:Name="CreatorNameLabel" Content="James Sentinella" FontSize="16px" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,-10,0,0" />
             <Label x:Name="SoftwareLabel" Content="This program uses the following software:" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" FontWeight="Bold" />
