--- a/ChronoUpdate/MainWindow.xaml
+++ b/ChronoUpdate/MainWindow.xaml
@@ -5,7 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChronoUpdate"
         mc:Ignorable="d"
-        Title="Chronokeep Update" Height="400" Width="400" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="Update Chronokeep" Height="400" Width="400" ResizeMode="NoResize" Closing="Window_Closing">
     <StackPanel VerticalAlignment="Center">
+        <StackPanel VerticalAlignment="Center" Margin="40,0,40,0" Name="settingsPanel">
+            <CheckBox Name="backupBox" Content="Backup database." IsChecked="True" />
+            <CheckBox Name="deleteOldBackupsBox" Content="Delete old database backups." IsChecked="True" />
+            <CheckBox Name="createDesktopShortcutBox" Content="Create desktop shortcut." />
+            <Label Content="Install to:" />
+            <TextBox Name="installLocationBox" Margin="0,0,0,10" />
+        </StackPanel>
+        <ScrollViewer Visibility="Collapsed" Name="updateViewer" Margin="10,0,10,10" Height="300" HorizontalScrollBarVisibility="Disabled">
+            <TextBlock Name="updateBlock" TextWrapping="Wrap"/>
+        </ScrollViewer>
+        <DockPanel HorizontalAlignment="Center">
+            <Button Name="installButton" Content="Install" Width="120" Margin="10,0,10,0" Click="installButton_Click"/>
+            <Button Name="cancelButton" Content="Cancel" Width="120" Margin="10,0,10,0" Click="cancelButton_Click"/>
+        </DockPanel>
     </StackPanel>
 </Window>
